charon/tests/ui/monomorphization/dyn-trait.out
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ^^^^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> tests/ui/monomorphization/dyn-trait.rs:6:1
  |
6 | / fn dyn_to_string(x: &dyn Display) -> String {
7 | |     x.to_string()
8 | | }
  | |_^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> tests/ui/monomorphization/dyn-trait.rs:6:18
  |
6 | fn dyn_to_string(x: &dyn Display) -> String {
  |                  ^

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1003:1

note: the error occurred when translating `core::fmt::Display::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt::<Str>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt::<alloc::string::String>`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

note: the error occurred when translating `core::fmt::Display::fmt::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/fmt/mod.rs:1028:5

error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 598 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::{impl core::fmt::Display::<Str>}::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:11:23
   |
11 |     let str: String = "hello".to_string();
   |                       -------------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

note: the error occurred when translating `core::marker::MetaSized::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/core/src/marker.rs:179:1

note: the error occurred when translating `core::marker::MetaSized::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------

thread 'rustc' panicked at /home/ssyram/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/index_vec-0.1.4/src/indexing.rs:128:10:
index out of bounds: the len is 0 but the index is 0
stack backtrace:
   0: __rustc::rust_begin_unwind
   1: core::panicking::panic_fmt
   2: core::panicking::panic_bounds_check
   3: <usize as index_vec::indexing::IdxSliceIndex<I,T>>::index
             at /home/ssyram/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/index_vec-0.1.4/src/indexing.rs:128:10
   4: index_vec::indexing::<impl core::ops::index::Index<R> for index_vec::idxslice::IndexSlice<I,[T]>>::index
             at /home/ssyram/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/index_vec-0.1.4/src/indexing.rs:218:15
   5: <charon_lib::ids::vector::Vector<I,T> as core::ops::index::Index<R>>::index
             at ./src/ids/vector.rs:357:20
   6: charon_driver::translate::translate_trait_objects::<impl charon_driver::translate::translate_ctx::ItemTransCtx>::gen_vtable_instance_init_body
             at ./src/bin/charon-driver/translate/translate_trait_objects.rs:857:47
   7: charon_driver::translate::translate_trait_objects::<impl charon_driver::translate::translate_ctx::ItemTransCtx>::translate_vtable_instance_init
             at ./src/bin/charon-driver/translate/translate_trait_objects.rs:1228:33
   8: charon_driver::translate::translate_items::<impl charon_driver::translate::translate_ctx::TranslateCtx>::translate_item_aux
             at ./src/bin/charon-driver/translate/translate_items.rs:166:28
   9: charon_driver::translate::translate_items::<impl charon_driver::translate::translate_ctx::TranslateCtx>::translate_item::{{closure}}::{{closure}}
             at ./src/bin/charon-driver/translate/translate_items.rs:37:54
  10: std::panicking::catch_unwind::do_call
             at /home/ssyram/.rustup/toolchains/nightly-2025-07-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std/src/panicking.rs:589:40
  11: __rust_try
  12: std::panicking::catch_unwind
             at /home/ssyram/.rustup/toolchains/nightly-2025-07-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std/src/panicking.rs:552:19
  13: std::panic::catch_unwind
             at /home/ssyram/.rustup/toolchains/nightly-2025-07-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std/src/panic.rs:359:14
  14: charon_driver::translate::translate_items::<impl charon_driver::translate::translate_ctx::TranslateCtx>::translate_item::{{closure}}
             at ./src/bin/charon-driver/translate/translate_items.rs:37:17
  15: charon_driver::translate::translate_ctx::TranslateCtx::with_def_id
             at ./src/bin/charon-driver/translate/translate_ctx.rs:162:19
  16: charon_driver::translate::translate_items::<impl charon_driver::translate::translate_ctx::TranslateCtx>::translate_item
             at ./src/bin/charon-driver/translate/translate_items.rs:31:14
  17: charon_driver::translate::translate_crate::translate
             at ./src/bin/charon-driver/translate/translate_crate.rs:668:17
  18: <charon_driver::driver::CharonCallbacks as rustc_driver_impl::Callbacks>::after_expansion
             at ./src/bin/charon-driver/driver.rs:157:29
  19: rustc_interface::passes::create_and_enter_global_ctxt::<core::option::Option<rustc_interface::queries::Linker>, rustc_driver_impl::run_compiler::{closure#0}::{closure#2}>::{closure#2}::{closure#0}
  20: rustc_interface::interface::run_compiler::<(), rustc_driver_impl::run_compiler::{closure#0}>::{closure#1}
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.
error: Thread panicked when extracting item `alloc::string::{impl#23}`.
 --> /rustc/library/alloc/src/string.rs:2623:1

note: the error occurred when translating `alloc::string::{impl core::fmt::Display::<alloc::string::String>}::{vtable}`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 729 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `alloc::string::{impl core::fmt::Display::<alloc::string::String>}::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: Item is not monomorphic: Mono(ItemRef { contents: Node { id: Id { id: 498 }, value: ItemRefContents { def_id: core::fmt::Formatter, generic_args: [Lifetime(Region { kind: ReBound(0, BoundRegion { var: 2, kind: Anon }) })], impl_exprs: [], in_trait: None, has_param: true } } })
 --> /rustc/library/core/src/fmt/mod.rs:562:1

note: the error occurred when translating `core::fmt::Display::fmt`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

note: the error occurred when translating `alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2780:1

note: the error occurred when translating `alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

note: the error occurred when translating `alloc::string::{impl#4}::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2805:1

note: the error occurred when translating `alloc::string::{impl#7}::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

note: the error occurred when translating `alloc::string::{impl alloc::string::ToString::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>}::to_string::<type_error("`dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead")>`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2807:5

error: `dyn Trait` is not yet supported with `--monomorphize`; use `--monomorphize-conservative` instead
 --> /rustc/library/alloc/src/string.rs:2794:5

note: the error occurred when translating `alloc::string::ToString::to_string`, which is (transitively) used at the following location(s):
 --> tests/ui/monomorphization/dyn-trait.rs:7:5
  |
7 |     x.to_string()
  |     -------------
ERROR Charon failed to translate this code (42 errors)
